<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
>
    <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Name"
            android:hint="@string/your_name"
            android:gravity="center"
            android:textSize="30sp"
    />
    <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Surname"
            android:hint="@string/your_surname"
            android:gravity="center"
            android:textSize="30sp"
    />
    <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Grade"
            android:hint="@string/your_grade"
            android:gravity="center"
            android:textSize="30sp"
    />
    <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Status"
            android:hint="@string/status"
            android:gravity="center"
            android:textSize="30sp"
    />
    <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Age"
            android:hint="@string/your_age"
            android:gravity="center"
            android:textSize="30sp"
    />
    <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Login"
            android:hint="@string/your_login"
            android:gravity="center"
            android:textSize="30sp"
    />
    <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Password"
            android:hint="@string/your_password"
            android:gravity="center"
            android:textSize="30sp"
    />
    <Button

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_reg"
            android:text="@string/registrate"
            android:gravity="center"
            android:textSize="30sp"
            android:onClick="onRegistration"
    />
</LinearLayout>
