<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
>
    <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Login"
            android:hint="@string/login"
            android:gravity="center"
            android:textSize="30sp"
    />
    <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Password"
            android:hint="@string/password"
            android:gravity="center"
            android:textSize="30sp"
    />
    <Button

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn"
            android:text="@string/log_in"
            android:gravity="center"
            android:textSize="30sp"
            android:onClick="CheckPerson"
    />
    <Button

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_reg"
            android:text="@string/registrate"
            android:gravity="center"
            android:textSize="30sp"
            android:onClick="onRegistration"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="100sp"
        android:textColor="RED"
        android:id="@+id/textview"
        android:text=""
    />
</LinearLayout>